Style primary nav bar Align menu items Display icons after labels Make sure it still works on mobile
See #1924

--- a/cms/sass/layout/_nav-bar.scss
+++ b/cms/sass/layout/_nav-bar.scss
@@ -11,7 +11,7 @@
   font-size: smaller;
 
   .feather {
-    margin: 0 0.5em;
+    margin: 0 $spacing-01;
     top: 0.125em;
     height: 15px;
   }
