--- a/cms/sass/layout/_secondary-nav.scss
+++ b/cms/sass/layout/_secondary-nav.scss
@@ -63,6 +63,11 @@
     }
   }
 
+  .secondary-nav__menu-toggle--active {
+    max-height: 100%;
+    height: auto;
+  }
+
   .secondary-nav__login {
     margin-left: 0;
   }
